<resources>
    <string name="app_name">ITIGraduationProject</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password"> Password </string>
    <string name="confirm_prompt_password">Confirm Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Name</string>
    <string name="phone">Mobile</string>
    <string name="login_btn_str">Login</string>
    <string name="SignUp">SignUp</string>
    <string name="national_id">National Id</string>
    <string name="Date">Select Birth Date</string>
    <string name="radio_Passenger">User</string>
    <string name="radio_Driver">Driver</string>
    <string name="male">Male</string>
    <string name="famle">Female</string>
    <string name="goLogin">Already a member?Login</string>
    <string name="CarInfo">Please Enter Car Information</string>
    <string name="car_owner_name">Please Enter Car Owner Name</string>
    <string name="car_plate">Please Enter Car plate  </string>
    <string name="address">Please Enter Car Owner Address</string>
    <string name="CarBrand">Please Enter Car Brand</string>
    <string name="linceEndDate">Please Enter Linces End Date</string>
    <string name="carModel">Please Enter Car Model </string>
    <string name="modelcaryear">Please Enter Car Model Year</string>
    <string name="carcolor">Please Enter Car Color</string>
    <string name="carcc">Please Enter Car CC</string>
    <string name="driveRegister">Complete Register</string>
    <string name="Register">Register</string>
    <string name="login">Login</string>

    <string name="hint_data">No account yet? Create one</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


</resources>
