<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rania.itigraduationproject.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_email"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="12dp"
                android:textSize="18dp"
                android:textColor="@android:color/black">

            </EditText>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="12dp"
                android:textSize="18dp"

                android:textColor="@android:color/black">

            </EditText>

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttondesign"
            android:text="@string/login_btn_str"
            android:textSize="20dp"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">



        </LinearLayout>

        <TextView android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:text="@string/hint_data"
            android:layout_marginTop="20dp"
            android:textSize="18dp"
            android:textColor="#33B5E5"
            android:gravity="center"/>

    </LinearLayout>

</ScrollView>
